load("@rules_rust//wasm_bindgen:wasm_bindgen.bzl", "rust_wasm_bindgen")

rust_wasm_bindgen(
    name = "runtime",
    wasm_file = "//:runtime_lib",
    visibility = ["//dist:__pkg__"],
)

filegroup(
    name = "runtime_files",
    srcs = ["lib.rs"] + [
        "builtin_modules.rs",
        "code_blocks.rs",
        "dom_helpers.rs",
        "modules.rs",
        "notebook.rs",
        "page_layout.rs",
        "prism.rs",
    ],
    visibility = ["//:__pkg__"],
)
