load("@rules_rust//wasm_bindgen:wasm_bindgen.bzl", "rust_wasm_bindgen")

rust_wasm_bindgen(
    name = "runtime",
    visibility = ["//dist:__pkg__"],
    wasm_file = "//:runtime_lib",
)

filegroup(
    name = "runtime_files",
    srcs = ["lib.rs"] + [
        "builtin_modules.rs",
        "code_blocks.rs",
        "dom.rs",
        "layout.rs",
        "modules.rs",
        "notebook.rs",
        "prism.rs",
    ],
    visibility = ["//:__pkg__"],
)
