K8 = "//toolchains/cc:linux_x86_64_clang_cc_toolchain"

WASM = "@emsdk//emscripten_toolchain:cc-compiler-wasm"

cc_toolchain_suite(
    name = "toolchains",
    toolchains = {
        "k8": K8,
        "k8|clang": K8,
        "wasm32": WASM,
        "wasm32|emscripten": WASM,
        "wasm64": WASM,
        "wasm64|emscripten": WASM,
    },
)
