load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "nodejs",
    srcs = ["@nodejs_linux_amd64//:node_bin"],
)

filegroup(
    name = "sqlite",
    srcs = ["//lib/sqlite"],
    output_group = "sqlite3",
)

bzl_library(
    name = "archive_symbols",
    srcs = ["archive_symbols.bzl"],
)

bzl_library(
    name = "wasm_library",
    srcs = ["wasm_library.bzl"],
)

bzl_library(
    name = "package",
    srcs = ["package.bzl"],
    visibility = ["//:__pkg__"],
    deps = [
        "//tools/emscripten:package",
        "//tools/llvm:package",
    ],
)
