load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files(["version_update.sh"])

filegroup(
    name = "nodejs",
    srcs = ["@nodejs_host//:node_bin"],
)

filegroup(
    name = "jq",
    srcs = ["//lib/jq"],
    output_group = "jq",
)

bzl_library(
    name = "javascript",
    srcs = ["javascript.bzl"],
)

bzl_library(
    name = "package",
    srcs = ["package.bzl"],
    visibility = ["//:__pkg__"],
    deps = [
        "//tools/emscripten:package",
        "//tools/llvm:package",
    ],
)
