load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_foreign_cc//tools/build_defs:cmake.bzl", "cmake_external")

package(default_visibility = ["//:__subpackages__"])

cmake_external(
    name = "vigra",
    binaries = select({
        ":build_binaries": [
            "vigra-config",
        ],
        "//conditions:default": [],
    }),
    cache_entries = {
        "FFTW3F_INCLUDE_DIR:PATH": "${EXT_BUILD_DEPS}/libfftw/include",
        "FFTW3F_LIBRARY:FILEPATH": "${EXT_BUILD_DEPS}/libfftw/lib/libfftw3q.a",
        "FFTW3_INCLUDE_DIR:PATH": "${EXT_BUILD_DEPS}/libfftw/include",
        "FFTW3_LIBRARY:FILEPATH": "${EXT_BUILD_DEPS}/libfftw/lib/libfftw3q.a",
        "JPEG_INCLUDE_DIR:PATH": "${EXT_BUILD_DEPS}/libjpeg/include",
        "JPEG_LIBRARY:FILEPATH": "${EXT_BUILD_DEPS}/libjpeg/lib/libjpeg.a",
        "LIB_SUFFIX:STRING": "",
        "PNG_LIBRARY:FILEPATH": "${EXT_BUILD_DEPS}/libpng/lib/libpng.a",
        "PNG_PNG_INCLUDE_DIR:PATH": "${EXT_BUILD_DEPS}/libpng/include",
        "TIFF_INCLUDE_DIR:PATH": "${EXT_BUILD_DEPS}/libtiff/include",
        "TIFF_LIBRARY:FILEPATH": "${EXT_BUILD_DEPS}/libtiff/lib/libtiff.a",
        "VIGRA_STATIC_LIB:BOOL": "ON",
        "WITH_HDF5:BOOL": "OFF",
        "WITH_VIGRANUMPY:BOOL": "OFF",
        "ZLIB_INCLUDE_DIR:PATH": "${EXT_BUILD_DEPS}/libz/include",
        "ZLIB_LIBRARY:FILEPATH": "${EXT_BUILD_DEPS}/libz/lib/libz.a",
    },
    lib_name = "libvigraimpex",
    lib_source = "@vigra//:all",
    static_libraries = ["libvigraimpex.a"],
    deps = [
        "//lib/fftw",
        "//lib/png",
        "//lib/tiff",
        "//lib/z",
        "//libjpeg_turbo",
    ],
)

bzl_library(
    name = "package",
    srcs = ["package.bzl"],
    deps = ["//:http_archive"],
)

config_setting(
    name = "build_binaries",
    values = {"define": "build_binaries=true"},
)
