load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_foreign_cc//tools/build_defs:configure.bzl", "configure_make")

package(default_visibility = ["//:__subpackages__"])

configure_make(
    name = "zlib",
    lib_source = "@zlib//:all",
    static_libraries = ["libz.a"],
)

bzl_library(
    name = "package",
    srcs = ["package.bzl"],
    deps = ["//:http_archive"],
)
