load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_foreign_cc//tools/build_defs:cmake.bzl", "cmake_external")

cmake_external(
    name = "zstd",
    cache_entries = {
        "ZSTD_BUILD_PROGRAMS:BOOL": "OFF",
        "ZSTD_BUILD_SHARED:BOOL": "OFF",
        "ZSTD_BUILD_STATIC:BOOL": "ON",
    },
    lib_source = "@zstd//:all",
    static_libraries = ["libzstd.a"],
)

bzl_library(
    name = "package",
    srcs = ["package.bzl"],
    visibility = ["//:__pkg__"],
    deps = ["//:http_archive"],
)
