load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("//tools:mocha_test.bzl", "mocha_test")
load("//tools:wasm_library.bzl", "wasm_library")

package(default_visibility = ["//visibility:public"])

wasm_library(
    name = "bz2_wasm",
    srcs = [":bz2_api"],
    exported_functions = [
        # keep sorted
        "BZ2_bzlibVersion",
    ],
    deps = ["//lib/bz2"],
)

ts_project(
    name = "bz2_api",
    srcs = ["bz2_api.ts"],
    deps = ["//tools/emscripten:types"],
)

mocha_test(
    name = "bz2_test",
    srcs = ["bz2_api.spec.ts"],
    deps = [":bz2_wasm"],
)
