load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("//tools:mocha_test.bzl", "mocha_test")
load("//tools:wasm_library.bzl", "wasm_library")

package(default_visibility = ["//visibility:public"])

wasm_library(
    name = "lz4_wasm",
    srcs = [":lz4_api"],
    build_settings = {
        "ALLOW_MEMORY_GROWTH": "1",
    },
    exported_functions = [
        # keep sorted
        "LZ4_versionString",
    ],
    deps = ["//lib/lz4"],
)

ts_library(
    name = "lz4_api",
    srcs = ["lz4_api.ts"],
    deps = ["//tools/emscripten:types"],
)

mocha_test(
    name = "lz4_test",
    srcs = ["lz4_api.spec.ts"],
    deps = [":lz4_wasm"],
)
