load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("//tools:mocha_test.bzl", "mocha_test")
load("//tools:wasm_library.bzl", "wasm_library")

package(default_visibility = ["//visibility:public"])

wasm_library(
    name = "lzma_wasm",
    srcs = [":lzma_api"],
    build_settings = {
        "USE_PTHREADS": "1",
    },
    exported_functions = [
        # keep sorted
        "lzma_version_string",
    ],
    deps = ["//lib/lzma"],
)

ts_project(
    name = "lzma_api",
    srcs = ["lzma_api.ts"],
    deps = ["//tools/emscripten:types"],
)

mocha_test(
    name = "lzma_test",
    srcs = ["lzma_api.spec.ts"],
    args = ["--node_options=--experimental-wasm-threads"],
    deps = [":lzma_wasm"],
)
